--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-dom": "18.0.10",
     "eslint": "7.32.0",
     "eslint-config-next": "^12.0.4",
+    "lorem-ipsum": "^2.0.8",
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
